fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+::-webkit-scrollbar {
+  display: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,9 +9,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior: none;
-}
-body::-webkit-scrollbar {
-  display: none;
 }
 
 code {
